# grass

./: .bandit  .clang-format  .coveragerc  .cppcheck-suppressions  .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gunittest.cfg  .markdownlint.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  .yamllint  AGENTS.md  AUTHORS  CHANGES  CITATION.cff  CITING  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  GOVERNANCE.md  GRASSConfig.cmake.in  INSTALL  INSTALL.md  Makefile  NEWS  README  README.debian  README.md  REQUIREMENTS.html  REQUIREMENTS.md  SECURITY.md  SUBMITTING  SUBMITTING_DOCS  (+32 more)
db/: CMakeLists.txt  Makefile  databaseintro.html  databaseintro.md
db/base/: Makefile  columns.c  connect.c  copy.c  createdb.c  databases.c  db.columns.html  db.copy.html  db.createdb.html  db.drivers.html  db.dropdb.html  db.droptable.html  db.execute.html  db.select.html  db.tables.html  describe.c  drivers.c  dropdb.c  droptable.c  execute.c  local_proto.h  printtab.c  select.c  tables.c
db/db.columns/: Makefile  db.columns.html  db.columns.md  main.c
db/db.connect/: Makefile  db.connect.html  db.connect.md  main.c
db/db.copy/: Makefile  db.copy.html  db.copy.md  main.c
db/db.createdb/: Makefile  db.createdb.html  db.createdb.md  main.c
db/db.databases/: Makefile  databases.c  db.databases.html  db.databases.md  main.c
db/db.describe/: Makefile  db.describe.html  db.describe.md  local_proto.h  main.c  printtab.c
db/db.drivers/: Makefile  db.drivers.html  db.drivers.md  main.c
db/db.dropdb/: Makefile  db.dropdb.html  db.dropdb.md  main.c
db/db.droptable/: Makefile  main.c
db/db.execute/: Makefile  db.execute.html  db.execute.md  execute.c  main.c
db/db.login/: Makefile  db.login.html  db.login.md  main.c
db/db.select/: Makefile  db.select.html  db.select.md  main.c  printtab.c
db/db.tables/: Makefile  db.tables.html  db.tables.md  main.c
db/drivers/: CMakeLists.txt  Makefile  README  README.md  mk_dbdriver_h.sh
demolocation/: CMakeLists.txt  Makefile  grassrc.cmake.in  grassrc.tmpl
demolocation/PERMANENT/: PROJ_EPSG  PROJ_INFO
display/: CMakeLists.txt  Makefile  displaydrivers.html  displaydrivers.md
display/d.ask/: Makefile  description.html  main.c
display/d.barscale/: Makefile  d.barscale.html  d.barscale.md  draw_n_arrow.c  draw_scale.c  main.c  mouse.c  options.h
display/d.colorlist/: Makefile  d.colorlist.html  d.colorlist.md  description.html  main.c
doc/: CMakeLists.txt  Makefile  NIX.md  README  debugging.txt  grass7_arch.odg  grass8_arch.odg  grass_database.html  grass_database.md  grass_gis_command_families.ods  grass_projects.md  help_loc_structure.odg  help_project_structure.odg  howto_release.md  howto_release.txt  html_documentation.txt  infrastructure.md  infrastructure.txt  interfaces_overview.md  jupyter_get_started.md  jupyter_intro.md  jupyter_intro_images.ipynb  loc_structure.odg  migration_50_51.txt  migration_to_grass_tools_python_api.md  parms_flags.txt  projectionintro.html  projectionintro.md  python_intro.md  quickstart.md
general/: CMakeLists.txt  Makefile
gui/: CMakeLists.txt  Makefile  wxguiintro.html  wxguiintro.md
imagery/: CMakeLists.txt  Makefile  imageryintro.html  imageryintro.md
include/: CC.h  CMakeLists.txt  G3d.h  Makefile  P_datetime.h  P_site.h  Paintlib.h  Rast.h  VERSION  V_.h  Vect.h  arraystats.h  bdlg_bm.h  bitmap.h  blas.h  btree.h  calc.h  cdhc.h  cluster.h  codes.h  colors.h  config.h  config.h.cmake.in  config.h.in  datetime.h  dbmi.h  dbmidefs.h  devlib.h  dig_atts.h  display.h  display_raster.h  dlg.h  dlg_bm.h  edit.h  fontcap.h  form.h  freetypecap.h  geom.h  gis.h  gisdefs.h  (+56 more)
lib/: CMakeLists.txt  Makefile  README  grasslib.dox
locale/: CMakeLists.txt  Makefile  README  README.md  grass_po_stats.py
man/: CMakeLists.txt  Makefile  build.py  build_check.py  build_check_rest.py  build_class.py  build_class_graphical.py  build_class_rest.py  build_full_index.py  build_full_index_rest.py  build_graphical_index.py  build_html.py  build_index.py  build_index_rest.py  build_keywords.py  build_manpages.py  build_manual_gallery.py  build_md.py  build_rest.py  build_topics.py  grassdocs.css  grasslogo_vector.eps  jquery.fixedheadertable.min.js  mkdocs.yml  parser_standard_options.css  parser_standard_options.js  parser_standard_options.py
ps/: CMakeLists.txt  Makefile
python/: .pylintrc  CMakeLists.txt  Makefile
raster/: CMakeLists.txt  Makefile  conftest.py  rasterintro.html  rasterintro.md
raster3d/: CMakeLists.txt  Makefile  raster3dintro.html  raster3dintro.md
scripts/: .flake8  CMakeLists.txt  Makefile  conftest.py  tmp.cmakelists.txt  windows_launch.bat  windows_sh_launch.bat
tools/: CMakeLists.txt  Makefile  build_html_index.sh  cvs.recursadd  cvs.remove  cvs.rename.dir  cvs.rename.file  cvs2cl.pl  dep_tree2sql.sh  fix_typos.sh  g51.extract_description.sh  gitlog2changelog.py  grass_indent.sh  grass_indent_ALL.sh  grassdocs.css  grasslogo_vector.eps  mkhtml.py  mkhtml.sh  mkrest.py  module_synopsis.sh  parser_standard_options.py  pep8config.txt  ppmrotate.py  pylintrc.txt  reindent.py  sql.sh  svnlog.sh  symbol_to_img.sh  thumbnails.py
utils/: CMakeLists.txt  Makefile  build_ubuntu_dependencies.sh  copywrite.pl  coverage_mapper.py  create_python_init_file.py  dep_tree2sql.sh  find_missing_toolboxes.py  find_missing_toolboxes.sh  fix_typos.sh  g.echo.c  gen_pgms_last_commit.py  generate_core_modules_with_last_commit_json_file.py  generate_last_commit_file.py  generate_release_notes.py  generate_version_git_file.sh  git2github.csv  git_author_github_name.csv  git_log2release_notes.py  gitlog2changelog.py  grass_clang_format.sh  grass_html2md.sh  grass_indent.sh  grass_indent_ALL.sh  known_bot_names.txt  markdown2man.py  md_isvalid.py  mdl_style.rb  merge_sitemaps.py  mkdocs.py  mkhtml.py  mkmarkdown.py  mkrest.py  module_synopsis.sh  pandoc_codeblock.lua  pep8config.txt  ppmrotate.py  pylintrc.txt  release.yml  replace_links.py  (+8 more)
vector/: CMakeLists.txt  Makefile  conftest.py  vectorintro.html  vectorintro.md
(+14207 files in other folders)
